# StreamNotifier

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Obscord V 1.0.py  Obscord lite.py  Obscord.py  README.md  RELEASE_NOTES.md  buildspec.json  stream_notifier.py
cmake/common/: buildspec_common.cmake
cmake/windows/: helpers.cmake
data/locale/: en-US.ini
scripts/: Use-ClangClDevEnv.ps1
src/: clang-cl-compat.h  stream-notifier.cpp
